--- a/templetes/result.html
+++ b/templetes/result.html
@@ -38,7 +38,7 @@
                 
                     {% for i in range( correct | length)  %}
                     <tr>
-                        <th scope="row">{{i}}</th>
+                        <th scope="row">{{ i+1 }}</th>
 
             <th>  
                 
